--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -60,7 +60,7 @@
             android:autoSizeTextType="uniform"
             android:background="@drawable/coursename"
             android:ems="10"
-            android:hint="Mcneese id"
+            android:hint="Stundent Id"
             android:inputType="text"
 
             android:padding="20dp"
@@ -78,19 +78,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="130dp"
             android:layout_marginTop="40dp"
-            app:srcCompat="@drawable/logo" />
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="120dp"
-            android:layout_height="100dp"
-            android:layout_alignEnd="@+id/imageView"
-            android:layout_alignBottom="@+id/imageView"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="100dp"
-
-            android:layout_marginBottom="-75dp"
-            app:srcCompat="@drawable/mcneesename" />
+            app:srcCompat="@drawable/logo_hust" />
 
         <Button
             android:id="@+id/addStudentdatabase"
