--- a/app/src/main/res/layout/activity_fourth.xml
+++ b/app/src/main/res/layout/activity_fourth.xml
@@ -82,19 +82,17 @@
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="130dp"
             android:layout_marginTop="40dp"
-            app:srcCompat="@drawable/logo" />
+            app:srcCompat="@drawable/logo_hust" />
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="120dp"
-            android:layout_height="100dp"
+        <CheckBox
+            android:id="@+id/checkbox_btn"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:text = "Show Password"
+            android:textSize = "20sp"
             android:layout_centerHorizontal="true"
-            android:layout_alignEnd="@+id/imageView"
-            android:layout_alignBottom="@+id/imageView"
-            android:layout_marginTop="100dp"
-
-            android:layout_marginBottom="-75dp"
-            app:srcCompat="@drawable/mcneesename" />
+            android:layout_below="@+id/passwordRegister"
+            />
 
         <Button
             android:id="@+id/buttonRegister"
