--- a/app/src/main/res/layout/activity_take_attendence.xml
+++ b/app/src/main/res/layout/activity_take_attendence.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,32 +18,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/logo_hust" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="120dp"
-        android:layout_height="100dp"
-        android:layout_alignEnd="@+id/imageView"
-        android:layout_alignBottom="@+id/imageView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="139dp"
-        android:layout_marginTop="111dp"
-        android:layout_marginEnd="152dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/mcneesename" />
+
 
     <TextView
         android:id="@+id/tvDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_centerHorizontal="true"
         android:layout_marginStart="135dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="200dp"
         android:fontFamily="serif"
         android:text="Date"
         android:textAllCaps="true"
@@ -60,7 +45,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="125dp"
 
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="300dp"
         android:layout_marginEnd="123dp"
         android:fontFamily="serif"
         android:text="wwww"
@@ -79,7 +64,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="125dp"
 
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="450dp"
         android:layout_marginEnd="123dp"
         android:fontFamily="serif"
         android:text="0"
@@ -96,7 +81,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="350dp"
         android:layout_marginEnd="78dp"
         android:ems="10"
         android:hint=" Student Id"
@@ -111,7 +96,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="171dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="400dp"
         android:layout_marginEnd="152dp"
         android:text="Check In"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +108,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="104dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="500dp"
         android:layout_marginEnd="104dp"
         android:text="No of Present Student"
         android:textColor="#0725DD"
@@ -132,4 +117,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvcounter" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
